--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -11,9 +11,18 @@ jobs:
     runs-on: ubuntu-18.04
     container: python:3.9-slim
     steps:
-      - uses: actions/checkout@v3  # Checkout the repository code
+      - name: Checkout
+        uses: actions/checkout@v3  # Checkout the repository code
 
-      - name: Runnnign test
-        run: echo "test are running"  # Install pytest
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
-     
+      - name: Lint Flake8 test 
+        run: |
+          flake8 service --count --select=E9,F63,F7,F82 --show-source --statistics
+          flake8 service --count --max-complexity=10 --max-line-length=127 --statistics
+
+      - name: Run unit test with nosetest color cordination 
+        run: nosetests -v --with-spec --spec-color --with-coverage --cover-package=app
